src/styles/_typography.scss
@use "mixins/typography";

body {
    font-size: 16px;
    font-family: var(--prezly-font-family-secondary);
    color: var(--prezly-text-color);
    word-break: break-word;
    background: var(--prezly-background-color);
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
}

h1,
.h1 {
    @include typography.heading-1;

    & {
        font-family: var(--prezly-font-family);
    }
}

h2,
.h2 {
    @include typography.heading-2;

    & {
        font-family: var(--prezly-font-family);
    }
}

h3,
.h3 {
    @include typography.heading-3;

    & {
        font-family: var(--prezly-font-family);
    }
}

p,
.paragraph {
    @include typography.paragraph;

    & {
        font-family: var(--prezly-font-family-paragraph, var(--prezly-font-family));
    }
}

a {
    color: var(--prezly-accent-color);

    & {
        font-family: inherit;
    }
}

.textSmall {
    @include typography.text-small;
}

.textTiny {
    @include typography.text-tiny;
}

label,
.label {
    @include typography.text-label;
}

